预定接口时间格式修改

--- a/js/pages/index/index.html
+++ b/js/pages/index/index.html
@@ -144,7 +144,7 @@
         <img class="intro-back1" src="../img/index-background.png">
         <div class="index-top-div">
             <div>您好，Echo</div>
-            <marquee direction="up" scrolldelay="100" scrollamount="1"  height="159" width="302">滚动的内容<br>滚动的内容<br>滚动的内容<br>滚动的内容<br>滚动的内容<br>滚动的内容</marquee>
+            <!-- <marquee direction="up" scrolldelay="100" scrollamount="1"  height="159" width="302">滚动的内容<br>滚动的内容<br>滚动的内容<br>滚动的内容<br>滚动的内容<br>滚动的内容</marquee> -->
             <!-- <div class="mui-input-row mui-search" ms-on-tap="openPop">
                 <input type="search" class="mui-input-clear index-top-search" placeholder="搜索">
             </div> -->
