--- a/js/pages/user/more.html
+++ b/js/pages/user/more.html
@@ -1,11 +1,38 @@
 <style>
-    .content {
-        height: 60px;
-        width: 100vw;
-        padding: 21px 30px 25px;
-        background-color: white;
-        margin-bottom: 12px;
-    }
+.content {
+    height: 60px;
+    width: 100vw;
+    padding: 21px 30px 25px;
+    background-color: white;
+    margin-bottom: 12px;
+}
+
+.footer-nav {
+    position: fixed;
+    display: flex;
+    justify-content: space-around;
+    height: 56px;
+    width: 100vw;
+    bottom: 0;
+    z-index: 10;
+    background-color: white;
+}
+
+.footer-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.footer-content img {
+    height: 30px;
+    width: 30px;
+}
+
+.footer-content div {
+    font-size: 8px;
+}
 </style>
 <div class="mui-page" ms-controller="more">
     <div class="content bs-text-444 bs-text-normal mui-navigate-right" onclick="javascript:location.href='../user-info.html';">
@@ -17,22 +44,22 @@
     <div class="content bs-text-444 bs-text-normal mui-navigate-right" onclick="javascript:location.href='../setting.html';">
         设置
     </div>
-    <nav class="mui-bar mui-bar-tab" style="background: white !important;height: 56px;padding: 8px 0 5px;">
-        <a class="mui-tab-item" ms-on-tap="goIndex">
-            <span class="mui-icon"><img src="/img/icon/icon-home.svg" class="nav-ico"></span>
-            <span class="mui-tab-label">首页</span>
-        </a>
-        <a class="mui-tab-item" ms-on-tap="goRoom">
-            <span class="mui-icon"><img src="/img/icon/icon-ruzhu.svg" class="nav-ico"></span>
-            <span class="mui-tab-label">入住</span>
-        </a>
-        <a class="mui-tab-item" ms-on-tap="goOrder">
-            <span class="mui-icon"><img src="/img/icon/icon-dingdan.svg" class="nav-ico"></span>
-            <span class="mui-tab-label">订单</span>
-        </a>
-        <a class="mui-tab-item" ms-on-tap="goMore">
-            <span class="mui-icon"><img src="/img/icon/icon-more-select.svg" class="nav-ico"></span>
-            <span class="mui-tab-label">我的</span>
-        </a>
-    </nav>
+    <div class="footer-nav">
+        <div class="footer-content" ms-on-tap="goIndex">
+            <img src="/img/icon/icon-home.svg" class="">
+            <div class="">主页</div>
+        </div>
+        <div class="footer-content" ms-on-tap="goRoom">
+            <img src="/img/icon/icon-ruzhu.svg" class="">
+            <div class="">入住</div>
+        </div>
+        <div class="footer-content" ms-on-tap="goOrder">
+            <img src="/img/icon/icon-dingdan.svg" class="">
+            <div class="">订单</div>
+        </div>
+        <div class="footer-content">
+            <img src="/img/icon/icon-more-select.svg" class="">
+            <div class="">more</div>
+        </div>
+    </div>
 </div>
