去掉测试显示元素

--- a/js/util/calendar.html
+++ b/js/util/calendar.html
@@ -104,11 +104,11 @@
     <!-- filter -->
     <div class="timeHour">
         <div class="start">
-            <div id="startDay" ms-visible="true"></div>
+            <div id="startDay" ms-visible="false"></div>
             <div id="startHour"></div>
         </div>
         <div class="end">
-            <div id="endDay" ms-visible="true"></div>
+            <div id="endDay" ms-visible="false"></div>
             <div id="endHour"></div>
         </div>
     </div>
