1、首页文字翻转bug更正 2、光照页面完成

--- a/js/pages/checkin/inroom.html
+++ b/js/pages/checkin/inroom.html
@@ -168,7 +168,7 @@ div .mui-popup-buttons .mui-popup-button {
                 <img src="../img/icon/movie.svg" alt="">
             </div>
         </div>
-        <div class="device-content" style="border-top: 1px solid #eee;border-bottom: 1px solid #eee;">
+        <div class="device-content" style="border-top: 1px solid #eee;border-bottom: 1px solid #eee;" onclick="javascript:location.href='../inroom/illumination.html';">
             <div>光照</div>
             <div>
                 <img src="../img/icon/sunshine.svg" alt="">
