--- a/js/pages/service/ready.html
+++ b/js/pages/service/ready.html
@@ -111,6 +111,25 @@
 .footer-content div {
     font-size: 8px;
 }
+
+.mui-popup-title {
+    margin: 20px;
+}
+
+.mui-popup-title+.mui-popup-text {
+    margin: 0 10px 10px;
+    text-align: left;
+}
+
+div .mui-popup-buttons {
+    height: 55px;
+}
+
+div .mui-popup-buttons .mui-popup-button {
+    height: 55px;
+    line-height: 55px;
+    color: #169488;
+}
 </style>
 <div class="" ms-controller="serviceReady">
     <div style="display: flex;height: 64px;padding: 20px 24px;background-color: white;">
