--- a/js/pages/index/index.html
+++ b/js/pages/index/index.html
@@ -117,10 +117,10 @@
 }
 
 .search {
-    height: 50px;
+    height: 45px;
     background-color: rgba(255,255,255, 0.3);
     margin: 12px 10px;
-    padding-top: 16px;
+    padding-top: 12px;
     border-radius: 30px;
     font-size: 18px;
 }
@@ -175,7 +175,7 @@
         <img class="intro-back1" src="../img/index-background.png">
         <div class="index-top-div">
             <div style="display: flex;justify-content: center;align-items: center;">
-                <div style="position: relative;">
+                <div style="position: relative;width: 94px;">
                     <div class="swiper-container swiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide bs-text-smaller swiper-no-swiping" style="background-color: transparent;" ms-repeat="greetList" data-repeat-rendered="greetSwiper">
@@ -186,11 +186,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="bs-text-white" style="margin-right: 6vw;">,Echo</div>
+                <div class="bs-text-white" style="margin-right: 8vw;">,Echo</div>
             </div>
             <div class="bs-bg-white bs-text-153 search" ms-on-tap="openPop">
-                <img src="../img/icon/icon-sousuo.svg" alt="" style="width: 18px;position: relative;top: 1px;">
-                <span style="position: relative;top: -2px;margin-left: 4px; color: white;">搜索</span>
+                <img src="../img/icon/icon-sousuo.svg" alt="" style="width: 18px;position: relative;float: left;top: 1px;left: 17px;">
+                <span style="position: relative;top: 1px; color: white;">搜索</span>
             </div>
         </div>
     </div>
