--- a/js/pages/checkin/illumination.html
+++ b/js/pages/checkin/illumination.html
@@ -81,6 +81,46 @@
     height: 26vw;
     width: 26vw;
 }
+
+.kaishi {
+    display: block;
+    height: 48px;
+    width: 48px;
+    background-image: url(../img/icon/start-444.svg);
+}
+
+.kaishi:active {
+    display: block;
+    height: 48px;
+    width: 48px;
+    background-image: url(../img/icon/started-444.svg);
+}
+.pause {
+    display: block;
+    height: 48px;
+    width: 48px;
+    background-image: url(../img/icon/pause-444.svg);
+}
+
+.pause:active {
+    display: block;
+    height: 48px;
+    width: 48px;
+    background-image: url(../img/icon/paused-444.svg);
+}
+.close {
+    display: block;
+    height: 48px;
+    width: 48px;
+    background-image: url(../img/icon/close-444.svg);
+}
+
+.close:active {
+    display: block;
+    height: 48px;
+    width: 48px;
+    background-image: url(../img/icon/closed-444.svg);
+}
 </style>
 <div ms-controller="illumination">
     <div class="header">
@@ -95,19 +135,16 @@
             窗帘控制
         </div>
         <div class="content">
-            <div class="content-unit" ms-on-tap="start">
-                <img ms-if="isStart==0" src="/img/icon/start-444.svg" class="">
-                <img ms-if="isStart==1" src="/img/icon/started-444.svg" class="">
+            <div class="content-unit">
+                <a class="kaishi" href="###" title=""></a>
                 <div class="">开始</div>
             </div>
-            <div class="content-unit" ms-on-tap="pause">
-                <img ms-if="isPause==0" src="/img/icon/pause-444.svg" class="">
-                <img ms-if="isPause==1" src="/img/icon/paused-444.svg" class="">
+            <div class="content-unit">
+                <a class="pause" href="###" title=""></a>
                 <div class="">暂停</div>
             </div>
-            <div class="content-unit" ms-on-tap="close">
-                <img ms-if="isClose==0" src="/img/icon/close-444.svg" class="">
-                <img ms-if="isClose==1" src="/img/icon/closed-444.svg" class="">
+            <div class="content-unit">
+                <a class="close" href="###" title=""></a>
                 <div class="">关闭</div>
             </div>
         </div>
@@ -118,50 +155,50 @@
         </div>
         <div class="content">
             <div class="content-unit" ms-on-tap="openZoulang">
-                <img ms-if="isShow1==0" src="/img/icon/icon-zoulangdeng.svg" class="">
-                <img ms-if="isShow1==1" src="/img/icon/icon-zoulangdeng-select.svg" class="">
+                <img ms-if="isShow1==0" src="../img/icon/icon-zoulangdeng.svg" class="">
+                <img ms-if="isShow1==1" src="../img/icon/icon-zoulangdeng-select.svg" class="">
                 <div class="">走廊灯</div>
             </div>
             <div class="content-unit" ms-on-tap="openTaipen">
-                <img ms-if="isShow2==0" src="/img/icon/icon-taipendeng.svg" class="">
-                <img ms-if="isShow2==1" src="/img/icon/icon-taipendeng-select.svg" class="">
+                <img ms-if="isShow2==0" src="../img/icon/icon-taipendeng.svg" class="">
+                <img ms-if="isShow2==1" src="../img/icon/icon-taipendeng-select.svg" class="">
                 <div class="">台盆灯</div>
             </div>
         </div>
         <div class="content">
             <div class="content-unit" ms-on-tap="openYugang">
-                <img ms-if="isShow3==0" src="/img/icon/icon-yugangdeng.svg" class="">
-                <img ms-if="isShow3==1" src="/img/icon/icon-yugangdeng-select.svg" class="">
+                <img ms-if="isShow3==0" src="../img/icon/icon-yugangdeng.svg" class="">
+                <img ms-if="isShow3==1" src="../img/icon/icon-yugangdeng-select.svg" class="">
                 <div class="">浴缸灯带</div>
             </div>
             <div class="content-unit" ms-on-tap="openLinyu">
-                <img ms-if="isShow4==0" src="/img/icon/icon-linyu.svg" class="">
-                <img ms-if="isShow4==1" src="/img/icon/icon-linyu-select.svg" class="">
+                <img ms-if="isShow4==0" src="../img/icon/icon-linyu.svg" class="">
+                <img ms-if="isShow4==1" src="../img/icon/icon-linyu-select.svg" class="">
                 <div class="">淋雨灯</div>
             </div>
             <div class="content-unit" ms-on-tap="openMatong">
-                <img ms-if="isShow5==0" src="/img/icon/icon-matongdeng.svg" class="">
-                <img ms-if="isShow5==1" src="/img/icon/icon-matongdeng-select.svg" class="">
+                <img ms-if="isShow5==0" src="../img/icon/icon-matongdeng.svg" class="">
+                <img ms-if="isShow5==1" src="../img/icon/icon-matongdeng-select.svg" class="">
                 <div class="">马桶灯</div>
             </div>
             <div class="content-unit" ms-on-tap="openTongfeng">
-                <img ms-if="isShow6==0" src="/img/icon/icon-tongfengdeng.svg" class="">
-                <img ms-if="isShow6==1" src="/img/icon/icon-tongfengdeng-select.svg" class="">
+                <img ms-if="isShow6==0" src="../img/icon/icon-tongfengdeng.svg" class="">
+                <img ms-if="isShow6==1" src="../img/icon/icon-tongfengdeng-select.svg" class="">
                 <div class="">通风</div>
             </div>
             <div class="content-unit" ms-on-tap="openYuedu">
-                <img ms-if="isShow7==0" src="/img/icon/icon-yuedudeng.svg" class="">
-                <img ms-if="isShow7==1" src="/img/icon/icon-yuedudeng-select.svg" class="">
+                <img ms-if="isShow7==0" src="../img/icon/icon-yuedudeng.svg" class="">
+                <img ms-if="isShow7==1" src="../img/icon/icon-yuedudeng-select.svg" class="">
                 <div class="">阅读灯</div>
             </div>
             <div class="content-unit" ms-on-tap="openChuangtou">
-                <img ms-if="isShow8==0" src="/img/icon/icon-chuangtoudeng.svg" class="">
-                <img ms-if="isShow8==1" src="/img/icon/icon-chuangtoudeng-select.svg" class="">
+                <img ms-if="isShow8==0" src="../img/icon/icon-chuangtoudeng.svg" class="">
+                <img ms-if="isShow8==1" src="../img/icon/icon-chuangtoudeng-select.svg" class="">
                 <div class="">床头灯</div>
             </div>
             <div class="content-unit" ms-on-tap="openTouping">
-                <img ms-if="isShow9==0" src="/img/icon/icon-toupingdeng.svg" class="">
-                <img ms-if="isShow9==1" src="/img/icon/icon-toupingdeng-select.svg" class="">
+                <img ms-if="isShow9==0" src="../img/icon/icon-toupingdeng.svg" class="">
+                <img ms-if="isShow9==1" src="../img/icon/icon-toupingdeng-select.svg" class="">
                 <div class="">弧形屏灯</div>
             </div>
         </div>
@@ -172,16 +209,16 @@
         </div>
         <div class="content-big">
             <div class="content-unit-big" ms-on-tap="movie">
-                <img ms-if="isShow10==0" src="/img/icon/movies.svg" class="">
-                <img ms-if="isShow10==1" src="/img/icon/movies-select.svg" class="">
+                <img ms-if="isShow10==0" src="../img/icon/movies.svg" class="">
+                <img ms-if="isShow10==1" src="../img/icon/movies-select.svg" class="">
             </div>
             <div class="content-unit-big" ms-on-tap="reading">
-                <img ms-if="isShow11==0" src="/img/icon/reading.svg" class="">
-                <img ms-if="isShow11==1" src="/img/icon/reading-select.svg" class="">
+                <img ms-if="isShow11==0" src="../img/icon/reading.svg" class="">
+                <img ms-if="isShow11==1" src="../img/icon/reading-select.svg" class="">
             </div>
             <div class="content-unit-big" ms-on-tap="allClose">
-                <img ms-if="isShow12==0" src="/img/icon/allClose.svg" class="">
-                <img ms-if="isShow12==1" src="/img/icon/allClose-select.svg" class="">
+                <img ms-if="isShow12==0" src="../img/icon/allClose.svg" class="">
+                <img ms-if="isShow12==1" src="../img/icon/allClose-select.svg" class="">
             </div>
         </div>
     </div>
