--- a/js/pages/checkin/inroom.html
+++ b/js/pages/checkin/inroom.html
@@ -162,7 +162,7 @@ div .mui-popup-buttons .mui-popup-button {
         <div class="bs-text-18" style="margin-bottom: 25px;">
             设备控制
         </div>
-        <div class="device-content">
+        <div class="device-content" onclick="javascript:location.href='../inroom/telecontroller.html';">
             <div>影视</div>
             <div>
                 <img src="../img/icon/movie.svg" alt="">
@@ -174,7 +174,7 @@ div .mui-popup-buttons .mui-popup-button {
                 <img src="../img/icon/sunshine.svg" alt="">
             </div>
         </div>
-        <div class="device-content">
+        <div class="device-content" onclick="javascript:location.href='../inroom/temperature.html';">
             <div>温度</div>
             <div>
                 <img src="../img/icon/temperature.svg" alt="" style="position: relative;right: 8px;">
