--- a/js/pages/user/more.html
+++ b/js/pages/user/more.html
@@ -59,7 +59,7 @@
         </div>
         <div class="footer-content">
             <img src="/img/icon/icon-more-select.svg" class="">
-            <div class="">more</div>
+            <div class="">更多</div>
         </div>
     </div>
 </div>
