--- a/js/pages/city/city.html
+++ b/js/pages/city/city.html
@@ -38,7 +38,7 @@
     <div id="container" style="z-index:1;height: 100%;" ms-visible="isShowMap"></div>
     <!-- 地图模式的酒店详情轮播 -->
     <div class="swiper-container swiper1" style="height: 200px; z-index: 10;position: absolute;bottom: 0;" ms-visible="isShowHotelDetail">
-        <div class="swiper-wrapper" style="padding-left: 15px;background-color: rgba(0,0,0,0.5);">
+        <div class="swiper-wrapper" style="padding-left: 15px;background-color: rgba(0,0,0,0);">
             <div class="swiper-slide swiper-slide-marker" ms-repeat="hotelMarkers" data-repeat-rendered="swiper1Render">
                 <div ms-css-background-image="url({{urlAPINet + el.coverUrl}})" style="height: 150px;background-size: cover;width: inherit;position: relative;" ms-on-tap="goHotel(el.id)">
                     <span class="distance">{{round(el.distance/1000)}}km</span>
@@ -130,7 +130,7 @@
             </button>
         </div>
         <div style="display: flex;justify-content: space-around;align-items: center;">
-            <a class="" ms-on-tap="goSort" style="width: 18vw">
+            <a class="" ms-on-tap="goSort" style="width: 18vw" ms-if="isShowMap==false">
                 <div class="mui-icon" style="top: 6px;"><img src="../img/icon/icon-paixu.svg" class="nav-ico" style="height: 24px; width: 24px;"></div>
                 <div style="position: relative;left: 5px;top: -3px;margin-bottom: 3px;">排序</div>
             </a>
