--- a/js/util/calendar.html
+++ b/js/util/calendar.html
@@ -33,6 +33,16 @@
     color: #B3DFDB;
 }
 
+.month-title {
+    font-size: 24px;
+    color: #444;
+    text-align: left;
+    border-color:#fff;
+    border-style: solid;
+    border-width: 20px 0 10px 10px;
+    background: #fff;
+}
+
 .time {
     display: flex;
     margin-top: 30px;
@@ -74,41 +84,48 @@
 <div id="modal-text-content" ms-controller="calendar">
     <section class="modal-content-title">
         <div class="modal-close" ms-click="closeModal"></div>
-        <div class="modal-save bs-text-x-larger" ms-click="closeModal">保存</div>
+        <div class="modal-save bs-text-x-larger" ms-click="closeModal">确定</div>
     </section>
     <section>
         <div style="margin: 0 10px;background: none;">
             <div class="calendar" style="border-bottom: 1px solid gainsboro;padding-bottom: 10px;">
                 <b>日</b><b>一</b><b>二</b><b>三</b><b>四</b><b>五</b><b>六</b>
             </div>
-            <div id="calendarPanel" class="calendar" style="background: url('img/loading.gif') no-repeat center;background-size: 81px 14px;overflow-y: auto;-webkit-overflow-scrolling: touch;">
+            <div id="calendarPanel" class="calendar" style="overflow-y: auto;-webkit-overflow-scrolling: touch;">
+            <!-- <div id="calendarPanel" class="calendar" style="background: url('img/loading.gif') no-repeat center;background-size: 81px 14px;overflow-y: auto;-webkit-overflow-scrolling: touch;"> -->
                 <!-- <a href="###">
                     15
                     <sub>打折</sub>
                 </a>-->
-                <a href="###" ms-repeat="calendar" ms-attr-disabled="el.isDisabled" ms-class-1="disabled:el.isDisabled" ms-class-2="split-top:(el.day<=7)" ms-class-3="split-left:(el.day==1)" ms-class-4="selected:isSelected($index)" ms-class-5="start:$index==startIndex" ms-class-6="end:endIndex&&$index==endIndex" ms-on-tap="clickDate($index)">
-                    <sup ms-if="el.day==1 && todayIndex!=$index">{{el.month}}月</sup> {{el.day==0?'&nbsp;':el.day}}
-                    <sup ms-if="todayIndex==$index">今天</sup>
-                </a>
+                <div ms-repeat="calendar">
+                    <div class="month-title">{{el.month}}月</div>
+                    <a href="###" ms-repeat-cl="el.days" ms-attr-disabled="cl.isDisabled" ms-class-1="disabled:cl.isDisabled" ms-class-2="selected:isSelected(cl.index)" ms-class-3="start:cl.index==startIndex" ms-class-4="end:endIndex&&cl.index==endIndex" ms-class-5="notThisMonth: cl.day==0" ms-on-tap="clickDate(cl, $index)">
+                        <!-- <sup ms-if="cl.day==1">
+                            {{cl.month}}月
+                        </sup>  -->
+                        {{cl.day==0?'&nbsp;':cl.day}}
+                        <!-- <sup ms-if="todayIndex==el.index">今天</sup> -->
+                    </a>
+                </div>
             </div>
         </div>
     </section>
     <section class="time">
         <a id="select_start" href="###">
-            <small class="bs-text-x-larger bs-text-444">{{startIndex==-1?'入住时间':(calendar[startIndex]?formatDate(calendar[startIndex].date):'&nbsp;')}}</small>
+            <small class="bs-text-x-larger bs-text-444">{{startIndex==-1?'入住时间':(calendarDates[startIndex]?formatDate(calendarDates[startIndex].date):'&nbsp;')}}</small>
         </a>
         <a id="select_end" href="###">
-            <small class="bs-text-x-larger bs-text-444">{{endIndex==-1?'退房时间':(calendar[endIndex]?formatDate(calendar[endIndex].date):'&nbsp;')}}</small>
+            <small class="bs-text-x-larger bs-text-444">{{endIndex==-1?'退房时间':(calendarDates[endIndex]?formatDate(calendarDates[endIndex].date):'&nbsp;')}}</small>
         </a>
     </section>
     <!-- filter -->
     <div class="timeHour">
         <div class="start">
-            <div id="startDay" ms-visible="false"></div>
+            <div id="startDay" ms-visible="true"></div>
             <div id="startHour"></div>
         </div>
         <div class="end">
-            <div id="endDay" ms-visible="false"></div>
+            <div id="endDay" ms-visible="true"></div>
             <div id="endHour"></div>
         </div>
     </div>
